--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ ul.timeline:before {
   background: #d4d9df;
   display: inline-block;
   position: absolute;
-  left: 20px;  /* Adjust for left-aligned timeline */
+  left: 20px;
   width: 2px;
   height: 100%;
   z-index: 400;
@@ -51,15 +51,9 @@ ul.timeline > li:before {
   display: inline-block;
   position: absolute;
   border-radius: 50%;
-  left: 15px;  /* Adjust for left-aligned circles */
+  left: 15px;
   width: 12px;
   height: 12px;
   z-index: 400;
-}
-
-/* Ensure text aligns left */
-ul.timeline > li span {
-  font-weight: bold;
-  color: #6e8cd4;
 }
 </style>
