--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: "Raghavi Rajumohan"
+---
+
 <div class="left-column">
   <h1>{{ site.title }}</h1>
   <p>{{ site.description }}</p>
@@ -21,6 +26,13 @@
 </div>
 
 <style>
+/* Left Column Styling */
+.left-column {
+  width: 40%;
+  float: left;
+  padding-right: 20px;
+}
+
 /* Add styling for the timeline */
 ul.timeline {
   list-style-type: none;
@@ -33,7 +45,7 @@ ul.timeline:before {
   background: #d4d9df;
   display: inline-block;
   position: absolute;
-  left: 20px;
+  left: 20px; /* Adjust for left-aligned timeline */
   width: 2px;
   height: 100%;
   z-index: 400;
@@ -51,9 +63,15 @@ ul.timeline > li:before {
   display: inline-block;
   position: absolute;
   border-radius: 50%;
-  left: 15px;
+  left: 15px; /* Adjust for left-aligned circles */
   width: 12px;
   height: 12px;
   z-index: 400;
+}
+
+/* Ensure text aligns left */
+ul.timeline > li span {
+  font-weight: bold;
+  color: #6e8cd4;
 }
 </style>
